# aideon-praxis

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .releaserc.json  .replit  .sonarcloud.properties  AGENTS.md  Architecture-Boundary.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TASKS.md  commitlint.config.cjs  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  replit.md  sonar-project.properties  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  vitest.config.mjs
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  nightly.yml  package-manual.yml  package-release.yml  pipeline.yml  python.yml  release.yml  (+7 more)
.husky/: commit-msg  pre-commit  pre-push
aideon-xtask/: Cargo.toml
aideon_xtask/: Cargo.toml
aideon_xtask/src/: main.rs
crates/aideon/: Cargo.toml
crates/aideon-chrona-visualization/: Cargo.toml
crates/aideon-chrona-visualization/src/: temporal.rs
crates/aideon-praxis-engine/: Cargo.toml
crates/aideon-praxis-engine/src/: dataset.rs
crates/aideon-praxis-engine/src/engine/: init.rs  mod.rs  ops.rs  state.rs  util.rs
crates/aideon-praxis-engine/src/meta/: config.rs  loader.rs  registry.rs
crates/aideon-praxis-facade/: Cargo.toml
crates/aideon-praxis-facade/src/: lib.rs
crates/aideon/src/: lib.rs
crates/aideon_chrona_visualization/: Cargo.toml  DESIGN.md  README.md
crates/aideon_chrona_visualization/src/: layout.rs  scene.rs
crates/aideon_mneme_core/: Cargo.toml  README.md
crates/aideon_mneme_core/src/: health.rs  memory.rs
crates/aideon_mneme_core/src/sqlite/: migrations.rs  projections.rs  refs.rs
crates/aideon_mneme_core/tests/: sqlite_metis_events.rs  sqlite_migrations.rs
crates/aideon_praxis_engine/: Cargo.toml  DESIGN.md  README.md
crates/aideon_praxis_engine/src/: dataset.rs  error.rs  graph.rs  meta_seed.rs
crates/aideon_praxis_engine/src/engine/: seed.rs  state.rs  util.rs
crates/aideon_praxis_engine/src/meta/: model.rs  validation.rs
crates/aideon_praxis_engine/tests/: merge_flow.rs  storage_persistence.rs  temporal_ops.rs
crates/aideon_praxis_facade/: Cargo.toml  DESIGN.md  README.md
crates/aideon_praxis_facade/src/: lib.rs
crates/aideon_praxis_host/: Cargo.toml  DESIGN.md  README.md  tauri.conf.json
crates/aideon_praxis_host/src/: app.rs  health.rs  lib.rs  praxis_api.rs  scene.rs  temporal.rs  windows.rs  worker.rs
crates/aideon_praxis_host/tests/: csp_and_windows.rs
crates/chrona/: Cargo.toml  DESIGN.md  README.md
crates/chrona/src/: layout.rs  lib.rs  scene.rs  temporal.rs
crates/engine/: Cargo.toml  DESIGN.md  README.md
crates/engine/src/: canvas.rs  dataset.rs  error.rs  graph.rs  meta_seed.rs
crates/engine/src/engine/: init.rs  mod.rs  ops.rs  seed.rs  state.rs  util.rs
crates/engine/src/meta/: loader.rs  mod.rs  model.rs  registry.rs  validation.rs
crates/engine/tests/: merge_flow.rs  storage_persistence.rs  temporal_ops.rs
crates/mneme/: Cargo.toml  DESIGN.md  README.md
crates/mneme-core/: Cargo.toml
crates/mneme-core/src/: memory.rs  store.rs
crates/mneme-core/src/sqlite/: migrations.rs  mod.rs  projections.rs
crates/mneme-core/tests/: sqlite_metis_events.rs  sqlite_migrations.rs
crates/mneme/src/: datastore.rs  health.rs  lib.rs  memory.rs  meta.rs  sqlite.rs  temporal.rs  types.rs
crates/mneme/src/sqlite/: commits.rs  metis_edge_changes.rs  metis_events.rs  metis_node_changes.rs  mod.rs  snapshot_tags.rs
crates/mneme/tests/: sqlite_metis_events.rs  sqlite_migrations.rs  temporal_changeset.rs
crates/praxis/: Cargo.toml
crates/praxis-engine/: Cargo.toml
crates/praxis-engine/src/: dataset.rs  error.rs  graph.rs  meta_seed.rs
crates/praxis-engine/src/engine/: init.rs  mod.rs  ops.rs  seed.rs  state.rs  util.rs
crates/praxis-engine/src/meta/: config.rs  loader.rs  model.rs  registry.rs  validation.rs
crates/praxis-engine/tests/: storage_persistence.rs
crates/praxis-facade/: Cargo.toml
crates/praxis-facade/src/: lib.rs
crates/praxis/src/: dataset.rs  engine.rs  error.rs  graph.rs  lib.rs  meta.rs  meta_seed.rs
crates/praxis/src/engine/: config.rs  init.rs  mod.rs  ops.rs  seed.rs  state.rs  util.rs
crates/praxis/src/meta/: config.rs  model.rs  validation.rs
crates/praxis/tests/: storage_persistence.rs
crates/tauri/: Cargo.toml  README.md  tauri.conf.json
crates/tauri/capabilities/: default.json
crates/tauri/src/: health.rs  lib.rs  menu.rs  scene.rs  temporal.rs  windows.rs  worker.rs
crates/tauri/tests/: state_at_payload_camelcase.rs
docs/: ARCHITECTURE_BOUNDARY.md  CODING_STANDARDS.md  DESIGN.md  ROADMAP.md  RectificationPlan.md  UX-DESIGN.md  analytics.md  canvas-architecture.md  commands.md  contracts-and-schemas.md  design-strategy-to-execution.md  design-system.md  design-tokens.md  domain-model.md  getting-started.md  interaction-patterns.md  praxis-design-system-blocks.md  praxis-desktop-implementation-guide.md  praxis-desktop-overview.md  praxis-desktop-svelte-migration.md  selection-and-editing.md  tauri-capabilities.md  tauri-client-server-pivot.md  template-screen.md  testing-strategy.md  ui-guidelines.md  ux-shell.md  ux_updates.md  widgets-and-templates.md
scripts/: build-worker-binary.mjs  dev-tauri.sh  inject-version.mjs  issues-cleanup.mjs  issues-cli.mjs  issues-close-done.mjs  issues-commits-backfill.mjs  issues-dod.mjs  issues-gh-mirror.mjs  issues-heuristic-backfill.mjs  issues-linkify.mjs  issues-project-sync.mjs  issues-split.mjs  issues-start.mjs  issues-sync.mjs  issues.py  labels-bootstrap.mjs  milestones-set-dates.mjs  project-actual-from-pr.mjs  project-dates-apply.mjs  render-c4.sh  rust-coverage.sh  smoke-electron.mjs  tauri-dev.sh  uvpy  uvpy.ps1
tests/: setup.ts
tools/: design-system-guard.mjs  preflight.mjs
xtask/: Cargo.toml
xtask/src/: main.rs
(+943 files in other folders)
