[workspace]
resolver = "2"
members = [
  "crates/aideon-praxis-facade",
  "crates/aideon-praxis-host",
  "crates/aideon-praxis-engine",
  "crates/aideon-chrona-visualization",
  "crates/aideon-metis-analytics",
  "crates/aideon-continuum-orchestrator",
  "crates/aideon-mneme-core",
  "aideon-xtask"
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared dependencies can be declared here when the crates start sharing code.
