[workspace]
resolver = "2"
members = [
  "crates/aideon_praxis_facade",
  "crates/aideon_praxis_host",
  "crates/aideon_praxis_engine",
  "crates/aideon_chrona_visualization",
  "crates/aideon_metis_analytics",
  "crates/aideon_continuum_orchestrator",
  "crates/aideon_mneme_core",
  "aideon_xtask"
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared dependencies can be declared here when the crates start sharing code.
