[workspace]
resolver = "2"
members = [
  "crates/aideon_praxis_facade",
  "crates/desktop",
  "crates/engine",
  "crates/chrona",
  "crates/metis",
  "crates/continuum",
  "crates/mneme",
  "aideon_xtask"
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared dependencies can be declared here when the crates start sharing code.
