[project]
name = "aideon-praxis"
requires-python = ">=3.13,<3.15"

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "ruff==0.6.9",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "mypy==1.11.2",
  "types-requests==2.32.0.20240914",
  "bandit==1.7.9",
  "vulture==2.11"
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = ["E","F","I","B","UP","SIM","PYI"]
lint.ignore = []
lint.fixable = ["ALL"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_any_generics = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["packages/worker/tests"]
