[package]
name = "aideon-xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
aideon-continuum-orchestrator = { path = "../crates/aideon-continuum-orchestrator" }
aideon-praxis-engine = { path = "../crates/aideon-praxis-engine" }
aideon-mneme-core = { path = "../crates/aideon-mneme-core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
