[package]
name = "aideon_xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
aideon_continuum_orchestrator = { path = "../crates/aideon_continuum_orchestrator" }
aideon_praxis_engine = { path = "../crates/aideon_praxis_engine" }
aideon_mneme_core = { path = "../crates/aideon_mneme_core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
