[package]
name = "aideon_xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
aideon_continuum = { path = "../crates/continuum" }
aideon_engine = { path = "../crates/engine" }
aideon_mneme = { path = "../crates/mneme" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
