[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
aideon-continuum = { path = "../crates/continuum" }
aideon-praxis = { path = "../crates/praxis" }
aideon-mneme = { path = "../crates/mneme" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
