[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
continuum-orchestrator = { path = "../crates/continuum-orchestrator" }
praxis-engine = { path = "../crates/praxis-engine" }
mneme-core = { path = "../crates/mneme-core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
