[package]
name = "aideon-chrona-visualization"
version = "0.0.0"
edition = "2024"
authors = ["Aideon Praxis Contributors"]
license = "MIT"

[dependencies]
aideon-mneme-core = { path = "../aideon-mneme-core" }
aideon-praxis-engine = { path = "../aideon-praxis-engine" }
log = "0.4"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt"] }
