[package]
name = "aideon"
version = "0.0.0"
edition = "2024"
license = "MIT"
authors = ["Aideon Praxis Contributors"]

[dependencies]
aideon-chrona = { path = "../chrona" }
aideon-continuum = { path = "../continuum" }
aideon-metis = { path = "../metis" }
aideon-mneme = { path = "../mneme" }
aideon-praxis = { path = "../praxis" }
