[package]
name = "aideon_chrona_visualization"
version = "0.0.0"
edition = "2024"
authors = ["Aideon Praxis Contributors"]
license = "MIT"

[dependencies]
aideon_mneme_core = { path = "../aideon_mneme_core" }
aideon_praxis_engine = { path = "../aideon_praxis_engine" }
log = "0.4"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
