[package]
name = "aideon_mneme_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aideon_continuum_orchestrator = { path = "../aideon_continuum_orchestrator" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
sea-query = "0.32.7"
tokio = { version = "1.48", features = ["rt", "macros", "fs"] }

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "rt"] }
