[package]
name = "aideon_praxis_engine"
version = "0.0.0"
edition = "2024"
authors = ["Aideon Praxis Contributors"]
license = "MIT"

[dependencies]
aideon_continuum_orchestrator = { path = "../aideon_continuum_orchestrator" }
aideon_mneme_core = { path = "../aideon_mneme_core" }
blake3 = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.48", features = ["sync"] }
futures = "0.3"
async-recursion = "1.1"

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "rt"] }
