[package]
name = "aideon_praxis_facade"
version = "0.0.0"
edition = "2024"
license = "MIT"
authors = ["Aideon Praxis Contributors"]

[dependencies]
aideon_chrona = { path = "../chrona" }
aideon_continuum = { path = "../continuum" }
aideon_metis = { path = "../metis" }
aideon_mneme = { path = "../mneme" }
aideon_engine = { path = "../engine" }
