[package]
name = "aideon_chrona"
version = "0.0.0"
edition = "2024"
authors = ["Aideon Praxis Contributors"]
license = "MIT"

[dependencies]
aideon_mneme = { path = "../mneme" }
aideon_engine = { path = "../engine" }
log = "0.4"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
