[package]
name = "aideon_engine"
version = "0.0.0"
edition = "2024"
authors = ["Aideon Praxis Contributors"]
license = "MIT"

[dependencies]
aideon_continuum = { path = "../continuum" }
aideon_mneme = { path = "../mneme" }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
async-recursion = "1.1"

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1", features = ["macros", "rt"] }
