[package]
name = "praxis-engine"
version = "0.0.0"
edition = "2024"
authors = ["Aideon Praxis Contributors"]
license = "MIT"

[dependencies]
continuum-orchestrator = { path = "../continuum-orchestrator" }
mneme-core = { path = "../mneme-core" }
blake3 = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile = "3.23"
