[package]
name = "aideon-praxis"
version = "0.0.0"
edition = "2024"
authors = ["Aideon Praxis Contributors"]
license = "MIT"

[dependencies]
aideon-continuum = { path = "../continuum" }
aideon-mneme = { path = "../mneme" }
bincode = "1.3"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
