[package]
name = "aideon-host"
version = "0.0.0"
edition = "2024"
license = "MIT"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aideon_praxis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
window-vibrancy = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
hyperlocal = "0.9"
bytes = "1"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = { version = "0.4" }

[dev-dependencies]
