[package]
name = "aideon-host"
version = "0.0.0"
edition = "2024"
license = "MIT"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aideon_praxis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
window-vibrancy = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
log = "0.4"
serde_json = "1"
dirs = "6"
aideon = { path = "../aideon" }

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = { version = "0.4" }

[dev-dependencies]
